<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/grid_0_5"
    android:background="@color/customCardviewSurfaceColor"
    android:foreground="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/article_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:padding="@dimen/grid_0_25"
        android:contentDescription="@string/article_head_image"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/preview" />

    <TextView
        android:id="@+id/source"
        style="@style/Newsster.Overline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/grid_1_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_image"
        tools:text="@string/source" />

    <TextView
        android:id="@+id/title"
        style="@style/Newsster.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/grid_2"
        android:fontFamily="@font/work_sans_medium"
        android:gravity="center"
        android:paddingStart="@dimen/grid_2"
        android:paddingEnd="@dimen/grid_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/source"
        tools:text="@string/title" />
</androidx.constraintlayout.widget.ConstraintLayout>